# Django-with-Next-js

./: .gitignore  .prettierignore  manage.py  next.config.js  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  tailwind.config.js
frontend/src/pages/: index.tsx
frontend/src/pages/about/: index.tsx
frontend/src/pages/contact/: contact.tsx  index.tsx
requirements/: base.txt  dev.txt
templates/_next/: 404.html  about.html  contact.html  index.html
templates/_next/contact/: contact.html
tirr_ml/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tirr_ml/scripts/: add_static.py
